--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
-github: [SigBaldi]                  # Your GitHub Sponsors username
+github: SigBaldi                  # Your GitHub Sponsors username
 buymeacoffee: sigbaldi
